# Python-ML-API

./: .gitignore
FastAPI_example/: pyproject.toml
FastAPI_example/webapp/: main.py  main_ML.py
FastAPI_example/webapp/static/: index.html
Flask_example/: Dockerfile  pyproject.toml
Flask_example/webapp/: app.py
Flask_roberta/: pyproject.toml
Flask_roberta/webapp/: app.py
