[tool.poetry]
name = "fastapi-example"
version = "0.1.0"
description = ""
authors = ["Joey Chen <hangghost@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
tensorflow = "^2.17.0"
transformers = "^4.43.3"
tf-keras = "^2.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
