[tool.poetry]
name = "flask-roberta"
version = "0.1.0"
description = ""
authors = ["Joey Chen <hangghost@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.4.0"
simpletransformers = "^0.70.1"
tensorboardx = "^2.6.2.2"
transformers = "^4.43.3"
flask = "^3.0.3"
onnxruntime = "^1.18.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
